--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "@trendmicro/react-sidenav": "^0.5.0",
     "es6-promise": "^4.2.8",
+    "google-maps-react": "^2.0.6",
+    "leaflet": "^1.6.0",
+    "leaflet-geosearch": "^3.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-styleguidist": "^11.0.8",
