Added stock prediction

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,9 +32,11 @@
     "react-styleguidist": "^11.0.8",
     "react-table-6": "^6.11.0",
     "react-table-filter": "^2.0.1",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "rumble-charts": "^3.1.2",
     "semantic-ui-react": "^0.88.2",
     "shallowequal": "^1.1.0",
     "tableau-api": "^2.2.3",
