--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "react-linkify": "^1.0.0-alpha",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
     "react-styleguidist": "^11.0.8",
     "react-table-6": "^6.11.0",
