--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "create-react-class": "^15.6.3",
+    "email-validator": "^2.0.4",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
@@ -25,10 +26,13 @@
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-linkify": "^1.0.0-alpha",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
+    "react-sticky-el": "^2.0.5",
     "react-styleguidist": "^11.0.8",
     "react-table-6": "^6.11.0",
     "react-table-filter": "^2.0.1",
@@ -39,6 +43,7 @@
     "rumble-charts": "^3.1.2",
     "semantic-ui-react": "^0.88.2",
     "shallowequal": "^1.1.0",
+    "sweetalert": "^2.1.2",
     "tableau-api": "^2.2.3",
     "tableau-react": "^1.2.2"
   },
