--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.0",
     "create-react-class": "^15.6.3",
     "email-validator": "^2.0.4",
+    "emailjs-com": "^2.4.1",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
